Calculator In Scrimba

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+    //Made with Scrimba
         <span id="num1-el"></span>
         <span id="num2-el"></span>
         <br>
@@ -15,3 +16,5 @@
         <script src="index.js"></script>
     </body>
 </html>
+
+
